--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.rackspace.apache</groupId>
   <artifactId>xerces2-xsd11</artifactId>
-  <version>2.11.1-SNAPSHOT</version>
+  <version>2.11.1</version>
   <packaging>jar</packaging>
   <name>Xerces2 Java</name>
   <description>A processor for parsing, validating, serializing and manipulating XML, written in Java</description>
@@ -56,7 +56,7 @@
     <url>https://github.com/sharwell/xerces2-j/tree/rackspace-master-xsd11</url>
     <connection>scm:git:git://github.com/sharwell/xerces2-j.git</connection>
     <developerConnection>scm:git:git@github.com:sharwell/xerces2-j.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>2.11.1</tag>
   </scm>
 
   <dependencies>
