--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.rackspace.apache</groupId>
   <artifactId>xerces2-xsd11</artifactId>
-  <version>2.11.2</version>
+  <version>2.11.3-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Xerces2 Java</name>
   <description>A processor for parsing, validating, serializing and manipulating XML, written in Java</description>
@@ -56,7 +56,7 @@
     <url>https://github.com/sharwell/xerces2-j/tree/rackspace-master-xsd11</url>
     <connection>scm:git:git://github.com/sharwell/xerces2-j.git</connection>
     <developerConnection>scm:git:git@github.com:sharwell/xerces2-j.git</developerConnection>
-    <tag>2.11.2-xsd11-rax</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <dependencies>
