--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
     <dependency>
       <groupId>com.rackspace.eclipse.webtools.sourceediting</groupId>
       <artifactId>org.eclipse.wst.xml.xpath2.processor</artifactId>
-      <version>2.1.100</version>
+      <version>2.1.101-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
 
